k8s/core/cilium/extra/k3s.fsn.as212024.net/httproute.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble-ui
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: ListenerSet
      name: hubble-ui
  hostnames:
    - hubble.k3s.fsn.as212024.net
  rules:
    - matches:
        - path:
            value: "/"
      backendRefs:
        - name: hubble-ui
          port: 80
